<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vct_white"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_search_et"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:drawablePadding="10dp"
        android:drawableTint="@color/vct_grey"
        android:hint="@string/search"
        android:paddingHorizontal="10dp"
        android:textColorHint="@color/vct_grey" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:paddingVertical="10dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnHistory"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/white"
            android:background="@drawable/bg_button_blue"
            android:text="@string/history"
            android:textAllCaps="false"
            android:textSize="15sp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDictionary"
            android:textColor="@color/white"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/bg_button_blue_light"
            android:text="@string/dictionary"
            android:textAllCaps="false"
            android:textSize="15sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp" />

</androidx.appcompat.widget.LinearLayoutCompat>